# telegram_test_funnel

./: .env  .gitignore  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yaml  example.env  models.py  pyproject.toml  requirements.txt
docker/: app.sh
migrations/: env.py
src/: funnel.py
